--- a/Actions/CheckForUpdates/action.yaml
+++ b/Actions/CheckForUpdates/action.yaml
@@ -32,7 +32,7 @@ inputs:
   downloadLatest:
     description: Set this input to Y in order to download latest version of the template repository (else it will reuse the SHA from last update)
     required: false
-    default: 'N'
+    default: 'Y'
   update:
     description: Set this input to Y in order to update AL-Go System Files if needed
     required: false
