--- a/Actions/CheckForUpdates/action.yaml
+++ b/Actions/CheckForUpdates/action.yaml
@@ -30,21 +30,21 @@ inputs:
     required: false
     default: ''
   downloadLatest:
-    description: Set this input to Y in order to download latest version of the template repository (else it will reuse the SHA from last update)
+    description: Set this input to true in order to download latest version of the template repository (else it will reuse the SHA from last update)
     required: false
-    default: 'Y'
+    default: 'true'
   update:
-    description: Set this input to Y in order to update AL-Go System Files if needed
+    description: Set this input to true in order to update AL-Go System Files if needed
     required: false
-    default: 'N'
+    default: 'false'
   updateBranch:
     description: Set the branch to update
     required: false
     default: ${{ github.ref_name }}
   directCommit:
-    description: Direct Commit (Y/N)
+    description: Direct Commit?
     required: false
-    default: 'N'
+    default: 'false'
 runs:
   using: composite
   steps:
@@ -63,7 +63,7 @@ runs:
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/CheckForUpdates.ps1 -actor $ENV:_actor -token $ENV:_token -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson -templateUrl $ENV:_templateUrl -templateBranch $ENV:_templateBranch -downloadLatest ($ENV:_downloadLatest -eq 'Y') -update ($ENV:_update -eq 'Y') -updateBranch $ENV:_updateBranch -directCommit ($ENV:_directCommit -eq 'Y')
+          ${{ github.action_path }}/CheckForUpdates.ps1 -actor $ENV:_actor -token $ENV:_token -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson -templateUrl $ENV:_templateUrl -templateBranch $ENV:_templateBranch -downloadLatest ($ENV:_downloadLatest -eq 'true') -update ($ENV:_update -eq 'true') -updateBranch $ENV:_updateBranch -directCommit ($ENV:_directCommit -eq 'true')
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
