--- a/Actions/DetermineDeliveryTargets/action.yaml
+++ b/Actions/DetermineDeliveryTargets/action.yaml
@@ -10,9 +10,9 @@ inputs:
     required: false
     default: '["."]'
   checkContextSecrets:
-    description: Check whether context secret exists
+    description: Check whether context secret exists?
     required: false
-    default: 'N'
+    default: 'false'
 outputs:
   DeliveryTargetsJson:
     description: An array of Delivery Targets in compressed JSON format
@@ -32,7 +32,7 @@ runs:
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/DetermineDeliveryTargets.ps1 -projectsJson $ENV:_projectsJson -checkContextSecrets ($ENV:_checkContextSecrets -eq 'Y')
+          ${{ github.action_path }}/DetermineDeliveryTargets.ps1 -projectsJson $ENV:_projectsJson -checkContextSecrets ($ENV:_checkContextSecrets -eq 'true' -or $ENV:_checkContextSecrets -eq 'Y')
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
