--- a/Templates/Per Tenant Extension/.github/workflows/CreateApp.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateApp.yaml
@@ -49,13 +49,14 @@ jobs:
     runs-on: [ windows-latest ]
     steps:
       - name: Input
+        if: github.event_name == 'workflow_dispatch'
         run: |
           Write-Host "Inputs:"
           $eventPath = Get-Content -Encoding UTF8 -Path $env:GITHUB_EVENT_PATH -Raw | ConvertFrom-Json
-          $eventPath.inputs.psObject.Properties | ForEach-Object {
+          $eventPath.inputs.psObject.Properties | Sort-Object { $_.Name } | ForEach-Object {
             $property = $_.Name
             $value = $eventPath.inputs."$property"
-            Write-Host "$property = '$value'"
+            Write-Host "- $property = '$value'"
           }
 
       - name: Checkout
