--- a/Actions/CheckForUpdates/action.yaml
+++ b/Actions/CheckForUpdates/action.yaml
@@ -17,16 +17,8 @@ inputs:
     description: The GitHub token running the action
     required: false
     default: ${{ github.token }}
-  parentTelemetryScopeJson:
-    description: Specifies the parent telemetry scope for the telemetry signal
-    required: false
-    default: '7b7d'
   templateUrl:
     description: URL of the template repository (default is the template repository used to create the repository)
-    required: false
-    default: ''
-  templateBranch:
-    description: Branch in template repository to use for the update (default is the default branch)
     required: false
     default: ''
   downloadLatest:
@@ -53,9 +45,7 @@ runs:
       env:
         _actor: ${{ inputs.actor }}
         _token: ${{ inputs.token }}
-        _parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
         _templateUrl: ${{ inputs.templateUrl }}
-        _templateBranch: ${{ inputs.templateBranch }}
         _downloadLatest: ${{ inputs.downloadLatest }}
         _update: ${{ inputs.update }}
         _updateBranch: ${{ inputs.updateBranch }}
@@ -63,7 +53,7 @@ runs:
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/CheckForUpdates.ps1 -actor $ENV:_actor -token $ENV:_token -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson -templateUrl $ENV:_templateUrl -templateBranch $ENV:_templateBranch -downloadLatest ($ENV:_downloadLatest -eq 'true' -or $ENV:_downloadLatest -eq 'Y') -update ($ENV:_update -eq 'true' -or $ENV:_update -eq 'Y') -updateBranch $ENV:_updateBranch -directCommit ($ENV:_directCommit -eq 'true' -or $ENV:_directCommit -eq 'Y')
+          ${{ github.action_path }}/CheckForUpdates.ps1 -actor $ENV:_actor -token $ENV:_token -templateUrl $ENV:_templateUrl -downloadLatest ($ENV:_downloadLatest -eq 'true' -or $ENV:_downloadLatest -eq 'Y') -update ($ENV:_update -eq 'true' -or $ENV:_update -eq 'Y') -updateBranch $ENV:_updateBranch -directCommit ($ENV:_directCommit -eq 'true' -or $ENV:_directCommit -eq 'Y')
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
