--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -19,7 +19,7 @@ on:
         required: false
         default: false
       defaultBcContainerHelperVersion:
-        description: 'Which version of BcContainerHelper to use? (latest, preview, private, a specific version number or a direct download URL like https://github.com/freddydk/navcontainerhelper/archive/master.zip - leave empty to use latest)'
+        description: 'Which version of BcContainerHelper to use? (latest, preview, private, a specific version number or a direct download URL like https://github.com/freddydk/navcontainerhelper/archive/master.zip). Leave empty to use latest (or preview for preview branches)'
         required: false
         default: ''
 
@@ -68,6 +68,13 @@ jobs:
               throw "In order to run the Deploy workflow, you need a Secret called OrgPAT containing a valid Personal Access Token"
             }
             $githubOwner = "$ENV:GITHUB_REPOSITORY_OWNER"
+            if ("$env:defaultBcContainerHelperVersion" -eq "") {
+              if ($env:branch -eq 'preview') {
+                $env:defaultBcContainerHelperVersion = 'preview'
+              } else {
+                $env:defaultBcContainerHelperVersion = 'latest'
+              }
+            }
             $config = @{
                   "githubOwner" = $githubOwner
                   "actionsRepo" = "AL-Go-Actions"
