--- a/Actions/Deploy/action.yaml
+++ b/Actions/Deploy/action.yaml
@@ -26,10 +26,15 @@ inputs:
   deploymentEnvironmentsJson:
     description: The settings for all Deployment Environments
     required: true
+outputs:
+  environmentUrl:
+    description: The URL of the deployed environment
+    value: ${{ steps.Deploy.outputs.environmentUrl }}
 runs:
   using: composite
   steps:
     - name: run
+      id: Deploy
       shell: ${{ inputs.shell }}
       env:
         _token: ${{ inputs.token }}
