--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -161,6 +161,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: '.artifacts'
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
