--- a/Actions/BuildALDoc/action.yaml
+++ b/Actions/BuildALDoc/action.yaml
@@ -18,13 +18,13 @@ runs:
   steps:
     - name: run
       shell: ${{ inputs.shell }}
-      id: DeployALDoc
+      id: BuildALDoc
       env:
         _token: ${{ inputs.token }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/DeployALDoc.ps1 -token $ENV:_token
+          ${{ github.action_path }}/BuildALDoc.ps1 -token $ENV:_token
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
