Update Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
Co-authored-by: Maria Zhelezova <43066499+mazhelez@users.noreply.github.com>

--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -12,7 +12,7 @@ on:
         type: boolean
         default: true
       directCommit:
-        description: Direct Commit
+        description: Direct Commit?
         type: boolean
         default: false
 
